--- a/src/main/java/fxmlfiles/AllStudentsController.fxml
+++ b/src/main/java/fxmlfiles/AllStudentsController.fxml
@@ -20,5 +20,6 @@
       </TableView>
       <Separator layoutX="-1.0" layoutY="599.0" prefHeight="23.0" prefWidth="779.0" />
       <Button fx:id="closeButton" layoutX="14.0" layoutY="649.0" mnemonicParsing="false" onAction="#closeTable" prefHeight="31.0" prefWidth="164.0" text="Close" />
+      <Button fx:id="deleteStudent" layoutX="702.0" layoutY="649.0" mnemonicParsing="false" onAction="#deleteStudent" text="Delete" />
    </children>
 </Pane>
