--- a/src/main/java/fxmlfiles/AllTrainersWindow.fxml
+++ b/src/main/java/fxmlfiles/AllTrainersWindow.fxml
@@ -21,5 +21,6 @@
       </TableView>
       <Separator layoutX="-1.0" layoutY="599.0" prefHeight="23.0" prefWidth="1067.0" />
       <Button fx:id="closeButton" layoutX="14.0" layoutY="649.0" mnemonicParsing="false" onAction="#closeTable" prefHeight="31.0" prefWidth="164.0" text="Close" />
+      <Button fx:id="deleteTrainer" layoutX="988.0" layoutY="649.0" mnemonicParsing="false" onAction="#deleteTrainer" text="Delete" />
    </children>
 </Pane>
