--- a/src/main/java/fxmlfiles/AllTrainersWindow.fxml
+++ b/src/main/java/fxmlfiles/AllTrainersWindow.fxml
@@ -22,5 +22,6 @@
       <Separator layoutX="-1.0" layoutY="599.0" prefHeight="23.0" prefWidth="1067.0" />
       <Button fx:id="closeButton" layoutX="14.0" layoutY="649.0" mnemonicParsing="false" onAction="#closeTable" prefHeight="31.0" prefWidth="164.0" text="Close" />
       <Button fx:id="deleteTrainer" layoutX="988.0" layoutY="649.0" mnemonicParsing="false" onAction="#deleteTrainer" text="Delete" />
+      <Button fx:id="newTrainer" layoutX="857.0" layoutY="649.0" mnemonicParsing="false" onAction="#createTrainer" prefHeight="31.0" prefWidth="63.0" text="New..." />
    </children>
 </Pane>
