--- a/src/main/java/fxmlfiles/CreateTrainerWindow.fxml
+++ b/src/main/java/fxmlfiles/CreateTrainerWindow.fxml
@@ -27,10 +27,10 @@
             <Label prefHeight="21.0" prefWidth="40.0" text="Skills" />
          </children>
       </VBox>
-      <TextField fx:id="trainerName" layoutX="170.0" layoutY="154.0" onAction="#getTrainerName" prefHeight="31.0" prefWidth="186.0" />
+      <TextField fx:id="trainerName" layoutX="170.0" layoutY="154.0" prefHeight="31.0" prefWidth="186.0" />
       <TextField fx:id="trainerSurname" layoutX="170.0" layoutY="203.0" />
-      <TextField fx:id="trainerNumber" layoutX="170.0" layoutY="261.0" onAction="#getTrainerNumber" />
-      <TextField fx:id="trainerEmail" layoutX="170.0" layoutY="314.0" onAction="#getTrainerEmail" />
+      <TextField fx:id="trainerNumber" layoutX="170.0" layoutY="261.0" />
+      <TextField fx:id="trainerEmail" layoutX="170.0" layoutY="314.0" />
       <ImageView fx:id="sdaLogo" fitHeight="64.0" fitWidth="83.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resources/download.jpg" />
@@ -39,6 +39,6 @@
       <Button fx:id="close" layoutX="111.0" layoutY="499.0" mnemonicParsing="false" onAction="#closeWindow" text="Close" />
       <Button fx:id="create" layoutX="283.0" layoutY="499.0" mnemonicParsing="false" onAction="#createButton" text="Create" />
       <ChoiceBox fx:id="gender" layoutX="169.0" layoutY="376.0" prefWidth="150.0" />
-      <TextField fx:id="trainerSkills" layoutX="170.0" layoutY="432.0" onAction="#getSkills" />
+      <TextField fx:id="trainerSkills" layoutX="170.0" layoutY="432.0" />
    </children>
 </Pane>
