--- a/src/main/java/fxmlfiles/TrainerWindow.fxml
+++ b/src/main/java/fxmlfiles/TrainerWindow.fxml
@@ -19,7 +19,7 @@
       <Button fx:id="backButton" layoutX="14.0" layoutY="656.0" mnemonicParsing="false" onAction="#goBack" prefHeight="50.0" prefWidth="100.0" text="Menu" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="64.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../resources/download1.jpg" />
+            <Image url="@../../resources/download.jpg" />
          </image>
       </ImageView>
       <Label layoutX="225.0" layoutY="284.0" prefHeight="35.0" prefWidth="449.0" text="Enter your phone number to see schedule">
