--- a/src/main/java/fxmlfiles/AllStudentsController.fxml
+++ b/src/main/java/fxmlfiles/AllStudentsController.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AllStudentsController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AllStudentsController">
    <children>
       <TableView fx:id="tableView" layoutX="1.0" layoutY="14.0" prefHeight="610.0" prefWidth="777.0">
         <columns>
@@ -19,8 +20,10 @@
         </columns>
       </TableView>
       <Separator layoutX="-1.0" layoutY="599.0" prefHeight="23.0" prefWidth="779.0" />
-      <Button fx:id="closeButton" layoutX="14.0" layoutY="649.0" mnemonicParsing="false" onAction="#closeTable" prefHeight="31.0" prefWidth="164.0" text="Close" />
-      <Button fx:id="deleteStudent" layoutX="702.0" layoutY="649.0" mnemonicParsing="false" onAction="#deleteStudent" text="Delete" />
-      <Button fx:id="newStudent" layoutX="579.0" layoutY="649.0" mnemonicParsing="false" onAction="#newStudent" prefHeight="31.0" prefWidth="63.0" text="New..." />
+      <Button fx:id="closeButton" layoutX="14.0" layoutY="706.0" mnemonicParsing="false" onAction="#closeTable" prefHeight="31.0" prefWidth="164.0" text="Close" />
+      <Button fx:id="deleteStudent" layoutX="702.0" layoutY="706.0" mnemonicParsing="false" onAction="#deleteStudent" text="Delete" />
+      <Button fx:id="newStudent" layoutX="579.0" layoutY="706.0" mnemonicParsing="false" onAction="#newStudent" prefHeight="31.0" prefWidth="63.0" text="New..." />
+      <Button fx:id="toCourseButton" layoutX="414.0" layoutY="706.0" mnemonicParsing="false" onAction="#addToCourse" text="Add to course" />
+      <ChoiceBox fx:id="selectedCourse" layoutX="417.0" layoutY="650.0" prefHeight="31.0" prefWidth="346.0" />
    </children>
 </Pane>
